# SMILE

./: .gitignore  CITATION.cff  LICENSE  README.md  platformio.ini
firmware/: platformio.ini
firmware/lib/CmdArduino/: Cmd.cpp  Cmd.h
firmware/lib/GlobalVars/: globalVars.cpp  globalVars.h
firmware/src/: main.cpp  ps_data.h
host/docs/: howTo.txt
host/notebooks/: smile_test.ipynb
host/src/: smile.py
host/src/pykiba/: __init__.py  pykidev.py
lib/CmdArduino/: README.md
lib/GlobalVars/: VarList.h
lib/varList/: VarList.h  globalVars.cpp  globalVars.h
pioArduinoProject/: README.md  platformio.ini
pioArduinoProject/lib/CmdArduino/: Cmd.cpp
pioArduinoProject/src/: board.cpp  main.cpp  ps_data.cpp
pythonHost/: README.md  Untitled.ipynb  pyproject.toml  requirements.txt  smile.py  smile_notebook.ipynb  smile_test.ipynb  tests.py
pythonHost/Documents/PlatformIO/Projects/SMILE/pythonHost/: smile_notebook.ipynb
pythonHost/pykiba/: pykidev.py
pythonHost/pykidev/: __init__.py  pykiba.py  pykidev.py  tools.py
src/: board.cpp  data_faker.cpp  globals.cpp  globals.h  main.cpp  ps_data.cpp
